1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Graph.m: Don't include stdlib.h.

	* Graph.[hm]: Arguments to setScaleModeX:Y: are now boolean, not
	integers.

1998-07-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ButtonPanel.m: Don't include collections/String.h.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* TkExtra.m ([TkExtra -preInitWithArgc:argv:]): Do namespace
	import for BLT things in the case of BLT 2.4 (as with 8.0-unoff).

1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* CompleteProbeDisplayLabel.m ([CompleteProbeDisplayLabel
	-createEnd]): Don't set up drag and drop or class browsing if
	there is no probe object.

	* common.m (tkobjc_dragAndDropTarget, dragAndDropTargetArg): Pass
	window name (%%W) to idReceive:.

	* VarProbeEntry.m ([VarProbeEntry -createEnd]): Replace call
	to getProbedType with ([getVarProbe getProbedType])[0].

	* VarProbeEntry.h (VarProbeEntry): Replace probeType with varProbe.

	* VarProbeEntry.[hm] ([VarProbeEntry -setVarProbe:]): Change accessor
	for same.  Add getVarProbe.

1998-07-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.tcl (do_package): Pass window to package:.
	(do_package_arg): Pass window to package:arg:.

	* common.m (oldSetupDragAndDrop, newSetupDragAndDrop): 
	 Pass %%W to do_package.
	 (oldSetupDragAndDropArg, newSetupDragAndDropArg): Pass %%W
	to do_package_arg.
	(tkobjc_bindButton3ToSpawn): Pass widgetName to Spawn:.
	(tkobjc_bindButton3ToArgSpawn): Pass widgetName to argSpawn:arg:.
	Focus on widget, not self.

	* VarProbeEntry.m (tkobjc_bindReturnToSetValue): Use setVariableValue:
	instead of setValue: (to discriminate different semantics of the
	two calls).

	* Entry.m ([Entry -setValue:]): Reset xview to 0 after inserting
	replacement value.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (TCLFILES): Name the Tcl files here, use in EXTRADIST.
	($(libtkobjc_la_OBJECTS)): Depend on _tcl.x files.
